--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "serversidecalcJohnny",
   "version": "1.0.0",
-  "description": "",
+  "description": "[Project Instructions](./INSTRUCTIONS.md), this line may be removed once you have updated the README.md",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Keplej/serversidecalcJohnny.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Keplej/serversidecalcJohnny/issues"
+  },
+  "homepage": "https://github.com/Keplej/serversidecalcJohnny#readme"
 }
